--- a/copter_base24/copter_base24.vcxproj.filters
+++ b/copter_base24/copter_base24.vcxproj.filters
@@ -25,19 +25,19 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="icon2.c">
-      <Filter>Файлы исходного кода</Filter>
-    </ClCompile>
     <ClCompile Include="radioactive1_L.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="rvsn2.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="rwsn.c">
+    <ClCompile Include="tux.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="tux.c">
+    <ClCompile Include="cat.c">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="icon1.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
