--- a/copter_base24/copter_base24.vcxproj.filters
+++ b/copter_base24/copter_base24.vcxproj.filters
@@ -40,5 +40,11 @@
     <ClCompile Include="icon1.c">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="icon2.c">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="rwsn.c">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
