--- a/copter_base24/copter_base24.vcxproj.filters
+++ b/copter_base24/copter_base24.vcxproj.filters
@@ -36,4 +36,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Visual Micro\.copter_base24.vsarduino.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
